--- a/index.html
+++ b/index.html
@@ -11,10 +11,27 @@
       referrerpolicy="no-referrer"
     /> -->
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Starter_BoilerPlate</title>
+    <title>HoverBoard</title>
   </head>
   <body>
-    <h1>Hello, This is starter Boiler_Plate...</h1>
+    <div class="container">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
 
     <script src="script.js"></script>
   </body>
